  nilfs, securityfs, selinux, xenfs

  tail -f (inotify-enabled) now avoids a race condition.
  Before, any data appended in the tiny interval between the initial
  read-to-EOF and the inotify watch initialization would be ignored
  initially (until more data was appended), or forever, if the file
  were first renamed or unlinked or never modified.
  [The race was introduced in coreutils-7.5]

  timeout now doesn't exit unless the command it is monitoring does,
  for any specified signal. [bug introduced in coreutils-7.0].

** Changes in behavior

  chroot, env, nice, and su fail with status 125, rather than 1, on
  internal error such as failure to parse command line arguments; this
  is for consistency with stdbuf and timeout, and avoids ambiguity
  with the invoked command failing with status 1.  Likewise, nohup
  fails with status 125 instead of 127.

  echo and printf now interpret \e as the Escape character (0x1B).

  rm -f /read-only-fs/nonexistent now succeeds and prints no diagnostic
  on systems with an unlinkat syscall that sets errno to EROFS in that case.
  Before, it would fail with a "Read-only file system" diagnostic.
  Also, "rm /read-only-fs/nonexistent" now reports "file not found" rather
  than the less precise "Read-only file system" error.

** New programs

  nproc: Print the number of processing units available to a process.

** New features

  env and printenv now accept the option --null (-0), as a means to
  avoid ambiguity with newlines embedded in the environment.

  md5sum --check now also accepts openssl-style checksums.
  So do sha1sum, sha224sum, sha384sum and sha512sum.

  mktemp now accepts the option --suffix to provide a known suffix
  after the substitution in the template.  Additionally, uses such as
  "mktemp fileXXXXXX.txt" are able to infer an appropriate --suffix.

  touch now accepts the option --no-dereference (-h), as a means to
  change symlink timestamps on platforms with enough support.

