@@ -52,6 +52,7 @@ Andy Longton                        alongton@metamark.com
 Anthony Thyssen                     anthony@griffith.edu.au
 Antonio Rendas                      ajrendas@yahoo.com
 Ariel Faigon                        ariel@cthulhu.engr.sgi.com
+Arjan Opmeer                        arjan.opmeer@gmail.com
 Arne H. Juul                        arnej@solan.unit.no
 Arne Henrik Juul                    arnej@imf.unit.no
 Arnold Robbins                      arnold@skeeve.com
@@ -401,7 +402,7 @@ Max Chang                           maxchang@ucla.edu
 Meelis Roos                         mroos@tartu.cyber.ee
 Michael                             michael@aplatform.com
 Michael ???                         michael@roka.net
-Michael Bacarella                   mbac@netgraft.com>
+Michael Bacarella                   mbac@netgraft.com
 Michael Deutschmann                 michael@talamasca.ocis.net
 Michael Elizabeth Chastain          mec.gnu@mindspring.com
 Michael Gaughen                     mgaughen@polyserve.com
