@@ -1,0 +1,55 @@
+#!/bin/sh
+# ensure that tail -F handles rotation
+
+# Copyright (C) 2009 Free Software Foundation, Inc.
+
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+if test "$VERBOSE" = yes; then
+  set -x
+  tail --version
+fi
+
+. $srcdir/test-lib.sh
+expensive_
+
+# For details, see
+# http://lists.gnu.org/archive/html/bug-coreutils/2009-11/msg00213.html
+
+# Perform at least this many iterations, because on multi-core systems
+# the offending sequence of events can be surprisingly uncommon.
+for i in $(seq 50); do
+    echo $i
+    rm -rf k x out
+    :>k && :>x && timeout 10 tail -F k > out 2>&1 &
+    pid=$!
+    sleep .1
+    echo b > k;
+    # wait for b to appear in out
+    while :; do grep b out > /dev/null && break; done
+    mv x k
+    # wait for tail to detect the rename
+    while :; do grep tail: out > /dev/null && break; done
+    echo ok >> k
+    found=0
+    # wait up to 10 seconds for "ok" to appear in out
+    for j in $(seq 100); do
+        grep ok out > /dev/null && { found=1; break; }
+        sleep 0.1
+    done
+    kill $pid
+    test $found = 0 && { fail=1; cat out; break; }
+done
+
+Exit $fail
